// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R3 — the phone is unchanged (golden) deliveries add sheet (header Add), iOS 390 1`] = `
{
  "lines": 968,
  "sha256": "e4be2c17ddf2cbf180a326cf67824a000c5b48a5809812aefde3aa708418233e",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, iOS 390 1`] = `
{
  "lines": 968,
  "sha256": "6ceea0f7b6dbb2ce852744d449f6c9299fb6903ca8197f4973f18b4914e75936",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 390 1`] = `
{
  "lines": 968,
  "sha256": "6ceea0f7b6dbb2ce852744d449f6c9299fb6903ca8197f4973f18b4914e75936",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 768 1`] = `
{
  "lines": 968,
  "sha256": "6ceea0f7b6dbb2ce852744d449f6c9299fb6903ca8197f4973f18b4914e75936",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries receive sheet (receive-<id>), iOS 390 1`] = `
{
  "lines": 996,
  "sha256": "45f8bfc7800d23f02472f2a75fe34ca0b533938307cd6963daeb40bf16e790c1",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, iOS 390 1`] = `
{
  "lines": 489,
  "sha256": "1c89abaa4fe04dfb358d56bee8cfc31e2efd8a284993905e72386d00af0d9b4f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 390 1`] = `
{
  "lines": 489,
  "sha256": "1c89abaa4fe04dfb358d56bee8cfc31e2efd8a284993905e72386d00af0d9b4f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 768 1`] = `
{
  "lines": 489,
  "sha256": "1c89abaa4fe04dfb358d56bee8cfc31e2efd8a284993905e72386d00af0d9b4f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, iOS 390 1`] = `
{
  "lines": 613,
  "sha256": "fe3eda57f61a1c8c5c6b1f4873a12f74b0c798db7a573aed6a04ef7b81f56b67",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 390 1`] = `
{
  "lines": 613,
  "sha256": "fe3eda57f61a1c8c5c6b1f4873a12f74b0c798db7a573aed6a04ef7b81f56b67",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 768 1`] = `
{
  "lines": 613,
  "sha256": "fe3eda57f61a1c8c5c6b1f4873a12f74b0c798db7a573aed6a04ef7b81f56b67",
}
`;
